--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,9 @@ body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
-
+.redhead{
+  color:red;
+}
 .container {
   margin: 0 auto;
   max-width: 740px;
